tests/macros/list/plugin.stderr
error: option `plugin` does not exist for kind `list`
 --> $DIR/plugin.rs:2:44
  |
2 |     let q = inquisition::questions![list { plugin: todo!() }];
  |                                            ^^^^^^
