tests/macros/list/plugin.rs
fn main() {
    let q = inquisition::questions![list { plugin: todo!() }];
}
